atualiza configurações de CORS